# Cheatoglobin

./: .gitignore  README.md  bis save archive.SaveRAM  cheatoglobin.nuitka-package.config.yml  pyproject.toml  requirements.txt  run.bat
.github/workflows/: build.yml
cheatoglobin/: __init__.py  __main__.py  constants.py  image.py  main.py  player_abilities_tab.py  player_inventory_tab.py  player_stats_tab.py  save_file_tab.py  window.py
