[project]
name = "cheatoglobin"
version = "1.0.0"
description = "Save editor for Mario & Luigi: Bowser's Inside Story."
authors = [
    {name = "Marc (ThePurpleAnon)"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pyside6 (>=6.8.2.1,<7.0.0.0)"
]

[project.scripts]
cheatoglobin = "cheatoglobin:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
nuitka = "^2.6.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
