[project]
name = "cheatoglobin"
version = "1.1.1"
description = "Save editor for Mario & Luigi: Bowser's Inside Story."
authors = [
    {name = "Marc (ThePurpleAnon)"},
    {name = "Dimitar Dimitrov",email = "dmtrdmtrov@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyside6 (>=6.9.0,<7.0.0)",
    "mnllib (>=0.2.0,<0.3.0)",
    "ndspy (>=4.2.0,<5.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]

[project.urls]
repository = "https://github.com/MnL-Modding/Cheatoglobin"

[project.scripts]
cheatoglobin = "cheatoglobin:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
nuitka = "^2.6.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
